[gd_scene load_steps=4 format=3 uid="uid://bv2l2wxsmadh2"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_v1xs5"]
[ext_resource type="Script" path="res://scripts/character.gd" id="2_8kswy"]
[ext_resource type="SpriteFrames" uid="uid://qmalhel875sr" path="res://animations/laika_gold.tres" id="3_ssc6s"]

[node name="Main" type="Node"]
script = ExtResource("1_v1xs5")
camera = NodePath("Character/Sprite/Camera2D")

[node name="Character" type="Node2D" parent="."]
scale = Vector2(0.4, 0.4)
script = ExtResource("2_8kswy")
move_speed = 50.0

[node name="Sprite" type="AnimatedSprite2D" parent="Character"]
sprite_frames = ExtResource("3_ssc6s")
centered = false

[node name="Camera2D" type="Camera2D" parent="Character/Sprite"]
anchor_mode = 0

[node name="Button" type="Button" parent="Character"]
self_modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0

[node name="Timer" type="Timer" parent="Character"]
one_shot = true

[connection signal="button_down" from="Character/Button" to="Character" method="_on_button_button_down"]
[connection signal="button_up" from="Character/Button" to="Character" method="_on_button_button_up"]
[connection signal="timeout" from="Character/Timer" to="Character" method="_on_timer_timeout"]
